AdBooker * Fixed the menu jumping to a new line on chrome

--- a/apps/ab/ui/_css/style.less
+++ b/apps/ab/ui/_css/style.less
@@ -13,3 +13,6 @@
 	
 }
 
+#pageheader .nav > li.dropdown > a {
+  padding: 10px 30px 11px 20px;
+}
